7 Nov 2011: Wouter
	- fixed the OSX installer problem, launchd does not load userspace
	  agents without hacks, and has side-effects that enables boot-start.

4 Nov 2011: Wouter
	- on OSX update config if old (no ssl443).
	- on OSX install config file before attempting to modify it.

3 Nov 2011: Wouter
	- remove error dialog at end of osx install.

2 Nov 2011: Wouter
	- check ssl fingerprint of servers.
	- remind user on make install about ssl443.

1 Nov 2011: Wouter
	- probe ssl servers (nlnetlabs default server configured).

31 Oct 2011: Wouter
	- do not log errors for unclean ssl close.

28 Oct 2011: Wouter
	- documentation fixes
	- osx dmg install fix for 10.6 packager (start of userspace panel).
	  also framework for debug logging in postflight of packager.
	  10.6 packages work on 10.7.  10.7 packages work on 10.7.
	- tag 0.7
	- trunk is 0.8 under development.
	- macinstall, launch unbound-anchor at boot (update if offline months)
	- echo in Makefile and newline if no probe performed.

27 Oct 2011: Wouter
	- osx dmg install and uninstall works.
	- for caches, also test if NSEC3 is present for QTYPE=NULL nodata.

26 Oct 2011: Wouter
	- uninstall command for OSX (put in the DMG).

25 Oct 2011: Wouter
	- fix echo at end of make install.
	- osx makepackage, donated by Carsten Strotmann.

22 Oct 2011: Wouter
	- fix unknown options for dnssec-trigger-panel, prints version too.

21 Oct 2011: Wouter
	- Add @ to echo in Makefile.
	- print error on control unknown command, and exit status 1.
	- tag 0.6
	- trunk is 0.7 under development.
	- fix that setup hint is not printed on a reinstall.
	- stop executables before re-install of dnssec-trigger.
	- tested to work on winXP (thanks Jan-Piet Mens).
	- fix printout of 1970 date, instead that no probe was performed.

18 Oct 2011: Wouter
	- Manpage fixes
	- can build outside of sourcedir.
	- libappindicator support, for Ubuntu Unity desktop GUI.

17 Oct 2011: Wouter
	- Fix insecure mode after dnstcp443 has been probed.